--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "67994682",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
     "\n",
     "        save_model(epoch, encoder, decoder, training_loss, validation_loss, checkpoint_path)\n",
     "\n",
-    "        print(\"Epoch: {1:}. Training Loss = {1:.4f}, Training Perplexity: {2:.4f}. Validation Loss: {3:.4f}, Validation Perplexity: {4:.4f}. Time: {5:f}\" \\\n",
+    "        print(\"Epoch: {:d}. Training Loss = {:.4f}, Training Perplexity: {:.4f}. Validation Loss: {:.4f}, Validation Perplexity: {:.4f}. Time: {:f}\" \\\n",
     "          .format(epoch, train_epoch_loss, np.exp(train_epoch_loss), val_epoch_loss, np.exp(val_epoch_loss), epoch_time))\n",
     "    \n",
     "    return training_loss, validation_loss\n",
@@ -418,50 +418,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training:  0   3.445712089538574\n",
-      "Training:  100   4.557940483093262\n",
-      "Training:  200   4.148390293121338\n",
-      "Training:  300   4.806350231170654\n",
-      "Training:  400   4.394772529602051\n",
-      "Validation:  0   3.6761958599090576\n",
-      "Epoch: 4.1024859943389895. Training Loss = 4.1025, Training Perplexity: 60.4905. Validation Loss: 4.2559, Validation Perplexity: 70.5187. Time: 0.523141\n",
-      "Training:  0   4.025753974914551\n",
-      "Training:  100   4.109526634216309\n",
-      "Training:  200   4.796710014343262\n",
-      "Training:  300   3.686384439468384\n",
-      "Training:  400   4.2791852951049805\n",
-      "Validation:  0   3.5996787548065186\n",
-      "Epoch: 3.924295334815979. Training Loss = 3.9243, Training Perplexity: 50.6174. Validation Loss: 4.2515, Validation Perplexity: 70.2116. Time: 0.960140\n",
-      "Training:  0   3.89064621925354\n",
-      "Training:  100   3.271575689315796\n",
-      "Training:  200   3.811802387237549\n",
-      "Training:  300   3.7648942470550537\n",
-      "Training:  400   3.4575552940368652\n",
-      "Validation:  0   3.5623321533203125\n",
-      "Epoch: 3.8280628042221068. Training Loss = 3.8281, Training Perplexity: 45.9734. Validation Loss: 4.2368, Validation Perplexity: 69.1855. Time: 1.413288\n",
-      "Training:  0   3.8021240234375\n",
-      "Training:  100   4.219902038574219\n",
-      "Training:  200   3.2227249145507812\n",
-      "Training:  300   2.73561692237854\n",
-      "Training:  400   3.405524969100952\n",
-      "Validation:  0   3.5400142669677734\n",
-      "Epoch: 3.7555224194526673. Training Loss = 3.7555, Training Perplexity: 42.7566. Validation Loss: 4.2472, Validation Perplexity: 69.9103. Time: 1.878962\n",
-      "Training:  0   3.068007469177246\n",
-      "Training:  100   3.579451084136963\n",
-      "Training:  200   3.454888343811035\n",
-      "Training:  300   3.819934606552124\n",
-      "Training:  400   3.5224344730377197\n",
-      "Validation:  0   3.533256769180298\n",
-      "Epoch: 3.694494204044342. Training Loss = 3.6945, Training Perplexity: 40.2252. Validation Loss: 4.2551, Validation Perplexity: 70.4637. Time: 2.340777\n",
-      "Training:  0   3.925957441329956\n",
-      "Training:  100   3.486142635345459\n",
-      "Training:  200   2.94818377494812\n",
-      "Training:  300   4.713620185852051\n",
-      "Training:  400   3.9051566123962402\n",
-      "Validation:  0   3.5151422023773193\n",
-      "Epoch: 3.6411872577667235. Training Loss = 3.6412, Training Perplexity: 38.1371. Validation Loss: 4.2542, Validation Perplexity: 70.4019. Time: 2.757564\n",
-      "Training:  0   3.1318674087524414\n",
-      "Training:  100   3.6345088481903076\n"
+      "Training:  0   4.385537147521973\n",
+      "Training:  100   2.824275255203247\n",
+      "Training:  200   4.237329483032227\n",
+      "Training:  300   4.2739362716674805\n",
+      "Training:  400   3.1215097904205322\n",
+      "Validation:  0   3.4859657287597656\n",
+      "Epoch: 0. Training Loss = 3.4319, Training Perplexity: 30.9363. Validation Loss: 4.3009, Validation Perplexity: 73.7627. Time: 0.593844\n",
+      "Training:  0   3.7339859008789062\n",
+      "Training:  100   4.200594425201416\n",
+      "Training:  200   3.744450092315674\n",
+      "Training:  300   3.726269483566284\n",
+      "Training:  400   3.8239715099334717\n",
+      "Validation:  0   3.493844985961914\n",
+      "Epoch: 1. Training Loss = 3.3969, Training Perplexity: 29.8704. Validation Loss: 4.3056, Validation Perplexity: 74.1118. Time: 1.006393\n",
+      "Training:  0   3.647059440612793\n",
+      "Training:  100   3.0379064083099365\n",
+      "Training:  200   2.3731160163879395\n",
+      "Training:  300   3.128211259841919\n",
+      "Training:  400   2.9506795406341553\n",
+      "Validation:  0   3.4830162525177\n",
+      "Epoch: 2. Training Loss = 3.3635, Training Perplexity: 28.8893. Validation Loss: 4.3214, Validation Perplexity: 75.2946. Time: 1.419526\n",
+      "Training:  0   3.3759496212005615\n",
+      "Training:  100   3.136727809906006\n",
+      "Training:  200   3.489413022994995\n",
+      "Training:  300   2.116215944290161\n",
+      "Training:  400   3.9824142456054688\n",
+      "Validation:  0   3.471137285232544\n",
+      "Epoch: 3. Training Loss = 3.3316, Training Perplexity: 27.9845. Validation Loss: 4.3313, Validation Perplexity: 76.0433. Time: 1.832341\n",
+      "Training:  0   3.3340795040130615\n",
+      "Training:  100   2.0259642601013184\n",
+      "Training:  200   3.963111639022827\n",
+      "Training:  300   3.768460988998413\n",
+      "Training:  400   4.201425552368164\n",
+      "Validation:  0   3.481130361557007\n"
      ]
     }
    ],
