--- a/prepare_dataset.ipynb
+++ b/prepare_dataset.ipynb
@@ -367,10 +367,10 @@
     "                        replace=False)\n",
     "imgs_val = list(set(img_list).difference(set(imgs_train)))\n",
     "\n",
-    "if len(imgs_train > 15000):\n",
-    "    imgs_train = imgs_train[:500]\n",
-    "if len(imgs_val) > 3000:\n",
-    "    imgs_val = imgs_val[:100]\n",
+    "# if len(imgs_train > 15000):\n",
+    "#     imgs_train = imgs_train[:500]\n",
+    "# if len(imgs_val) > 3000:\n",
+    "#     imgs_val = imgs_val[:100]\n",
     "\n",
     "captions_full = dict(zip(full_img_list, \n",
     "                         [[] for _ in range(len(full_img_list))]))\n",
