Select images from training data using seed and random function, create utils file that containes some functions

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -35,6 +35,7 @@
     "\n",
     "from pathlib import Path\n",
     "from DatasetInterface import MSCOCOInterface\n",
+    "from utils import train, save_model, load_model, plot_loss\n",
     "import json\n",
     "import numpy as np\n",
     "import time\n",
@@ -135,42 +136,29 @@
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
     "    'caps_per_img': 1,\n",
-    "    'stage': \"train\",\n",
+    "    'mode': 'train',\n",
     "    'idx_to_string': None,\n",
     "    'string_to_index': None,\n",
+    "    \"seed\": 706\n",
     "}\n",
     "\n",
     "val_interface_params = {\n",
     "    'imgs_path': imgs_path,\n",
     "    'captions_path': val_captions_path,\n",
-    "    'freq_threshold': 5,\n",
+    "    'freq_threshold': 6,\n",
     "    'sequence_length': 20,\n",
     "    'caps_per_img': 1,\n",
-    "    'stage': \"validation\",\n",
+    "    'mode': 'validation',\n",
     "    'idx_to_string': None,\n",
     "    'string_to_index': None,\n",
+    "    \"seed\": 706\n",
     "}\n",
-    "\n",
-    "test_interface_params = {\n",
-    "    'imgs_path': imgs_path_test,\n",
-    "    'captions_path': test_captions_path,\n",
-    "    'freq_threshold': 5,\n",
-    "    'sequence_length': 20,\n",
-    "    'caps_per_img': 1,\n",
-    "    'stage': \"test\",\n",
-    "    'idx_to_string': None,\n",
-    "    'string_to_index': None,\n",
-    "}\n",
-    "\n",
     "\n",
     "# Training Interface\n",
     "coco_interface_train = MSCOCOInterface(**train_interface_params)\n",
     "\n",
     "# Validation Interface\n",
-    "coco_interface_val = MSCOCOInterface(**val_interface_params)\n",
-    "\n",
-    "# Testing Interface\n",
-    "coco_interface_test = MSCOCOInterface(**test_interface_params)\n"
+    "coco_interface_val = MSCOCOInterface(**val_interface_params)"
    ]
   },
   {
@@ -189,10 +177,10 @@
     }
    ],
    "source": [
-    "print(\"Lenght of training image: {}, Lenght of Validation image: {} Lenght of Testing image: {}\"\\\n",
-    "      .format(len(coco_interface_train), len(coco_interface_val), len(coco_interface_test)))\n",
+    "print(\"Length of training image: {}, Length of Validation image: {}\"\\\n",
+    "      .format(len(coco_interface_train), len(coco_interface_val)))\n",
     "\n",
-    "print(f\"Lenght of vocabulary: {len(coco_interface_train.idx_to_string)}\")"
+    "print(f\"Length of vocabulary: {len(coco_interface_train.idx_to_string)}\")"
    ]
   },
   {
@@ -202,10 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 1\n",
+    "batch_size = 32\n",
     "train_loader = data.DataLoader(coco_interface_train, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = data.DataLoader(coco_interface_val, batch_size=batch_size, shuffle=False)\n",
-    "test_loader = data.DataLoader(coco_interface_test, batch_size=batch_size, shuffle=False)"
+    "val_loader = data.DataLoader(coco_interface_val, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
@@ -267,11 +254,11 @@
     "# the loss is a cross entropy loss and ignore the index of <PAD> since it doesn't make any difference\n",
     "criterion = nn.CrossEntropyLoss(ignore_index=coco_interface_train.string_to_index[\"<PAD>\"])\n",
     "\n",
-    "# combine the paramters of decoder and ecnoder\n",
+    "# combine the parameters of decoder and encoder\n",
     "params = list(decoder.parameters()) + list(encoder.embed.parameters())\n",
     "\n",
     "# Adam optimizer\n",
-    "opt_pars = {'lr':1e-5, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
+    "opt_pars = {'lr':1e-3, 'weight_decay':1e-3, 'betas':(0.9, 0.999), 'eps':1e-08}\n",
     "optimizer = optim.Adam(params, **opt_pars)"
    ]
   },
@@ -281,131 +268,6 @@
    "metadata": {},
    "source": [
     "## Train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "14c8e3e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_model(epoch, encoder, decoder, training_loss, validation_loss, checkpoint_path):\n",
-    "    torch.save({\n",
-    "        'epoch': epoch,\n",
-    "        'encoder_state_dict': encoder.state_dict(),\n",
-    "        'decoder_state_dict': decoder.state_dict(),\n",
-    "        'training_loss': training_loss,\n",
-    "        'validation_loss': validation_loss\n",
-    "    }, checkpoint_path)\n",
-    "\n",
-    "def load_model(encoder, decoder, checkpoint_path):\n",
-    "\n",
-    "    checkpoint = torch.load(checkpoint_path)\n",
-    "    encoder.load_state_dict(checkpoint['encoder_state_dict'])\n",
-    "    decoder.load_state_dict(checkpoint['decoder_state_dict'])\n",
-    "    training_loss = checkpoint['training_loss']\n",
-    "    validation_loss = checkpoint['validation_loss']\n",
-    "\n",
-    "    return encoder, decoder, training_loss, validation_loss\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "de69f6e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./model/image_captioning_model_v1.pth file does not exist, training startging from scratch\n"
-     ]
-    }
-   ],
-   "source": [
-    "CHECKPOINT = './model/image_captioning_model_v1.pth'\n",
-    "if Path(CHECKPOINT).exists():\n",
-    "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
-    "else:\n",
-    "    print(f'{CHECKPOINT} file does not exist, training startging from scratch')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "67994682",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train(encoder, decoder, criterion, optimizer, train_loader, val_loader, total_epoch, checkpoint_path):\n",
-    "    \n",
-    "    encoder.to(device)\n",
-    "    decoder.to(device)\n",
-    "    \n",
-    "    training_loss = []\n",
-    "    validation_loss = []\n",
-    "    \n",
-    "    start_time = time.time()\n",
-    "    for epoch in range(total_epoch):\n",
-    "        train_epoch_loss = 0\n",
-    "        val_epoch_loss = 0\n",
-    "        \n",
-    "        \n",
-    "        # Training phase\n",
-    "        encoder.train()\n",
-    "        decoder.train()\n",
-    "        \n",
-    "        for i, batch in enumerate(train_loader):\n",
-    "            idx, images, captions = batch\n",
-    "            images, captions = images.to(device), captions.to(device)\n",
-    "            \n",
-    "            # Zero the gradients.\n",
-    "            encoder.zero_grad()\n",
-    "            decoder.zero_grad()\n",
-    "            \n",
-    "            features = encoder(images)\n",
-    "            outputs = decoder(features, captions)\n",
-    "            \n",
-    "            loss = criterion(outputs.view(-1, vocab_size), captions.contiguous().view(-1))\n",
-    "            \n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "        \n",
-    "            train_epoch_loss += loss.item()\n",
-    "            if i % 100 == 0:\n",
-    "                print('Training: ', i, ' ', loss.item())\n",
-    "                \n",
-    "        train_epoch_loss /= len(train_loader)\n",
-    "        training_loss.append(train_epoch_loss)\n",
-    "        \n",
-    "        # validation phase\n",
-    "        encoder.eval()\n",
-    "        decoder.eval()\n",
-    "        \n",
-    "        for id, batch in enumerate(val_loader):\n",
-    "            idx, images, captions = batch\n",
-    "            images, captions = images.to(device), captions.to(device)\n",
-    "            features = encoder(images)\n",
-    "            outputs = decoder(features, captions)\n",
-    "            loss = criterion(outputs.view(-1, vocab_size), captions.contiguous().view(-1))\n",
-    "            val_epoch_loss += loss.item()\n",
-    "            if id % 100 == 0:\n",
-    "                print('Validation: ', id, ' ', loss.item())\n",
-    "            \n",
-    "        val_epoch_loss /= len(val_loader)\n",
-    "        validation_loss.append(val_epoch_loss)\n",
-    "    \n",
-    "        epoch_time = (time.time() - start_time) /60**1\n",
-    "\n",
-    "        save_model(epoch, encoder, decoder, training_loss, validation_loss, checkpoint_path)\n",
-    "\n",
-    "        print(\"Epoch: {:d}. Training Loss = {:.4f}, Training Perplexity: {:.4f}. Validation Loss: {:.4f}, Validation Perplexity: {:.4f}. Time: {:f}\" \\\n",
-    "          .format(epoch, train_epoch_loss, np.exp(train_epoch_loss), val_epoch_loss, np.exp(val_epoch_loss), epoch_time))\n",
-    "    \n",
-    "    return training_loss, validation_loss\n",
-    "    "
    ]
   },
   {
